--- a/notebooks/03_modeling.ipynb
+++ b/notebooks/03_modeling.ipynb
@@ -290,7 +290,7 @@
       "\n",
       "KẾT QUẢ ĐÁNH GIÁ MÔ HÌNH\n",
       "----------------------------------------------------------------------------------\n",
-      "| Tên mô hình             |  Accuracy| Precision|    Recall|  F1-Score|       AUC|\n",
+      "| Model                   |  Accuracy| Precision|    Recall|  F1-Score|       AUC|\n",
       "----------------------------------------------------------------------------------\n",
       "| Logistic Regression     |    0.7554|    0.5076|    0.6262|    0.5607|    0.7576|\n",
       "| Random Forest           |    0.8003|    0.5906|    0.6482|    0.6181|    0.7880|\n",
@@ -320,10 +320,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import (\n",
@@ -426,7 +422,7 @@
       "\n",
       "KẾT QUẢ ĐÁNH GIÁ MÔ HÌNH\n",
       "----------------------------------------------------------------------------------\n",
-      "| Tên mô hình             |  Accuracy| Precision|    Recall|  F1-Score|       AUC|\n",
+      "| Model                   |  Accuracy| Precision|    Recall|  F1-Score|       AUC|\n",
       "----------------------------------------------------------------------------------\n",
       "| Logistic custom 1       |    0.7554|    0.5076|    0.6262|    0.5607|    0.7576|\n",
       "| Logistic custom 2       |    0.7520|    0.5019|    0.7068|    0.5870|    0.7710|\n",
